<resources>
    <string name="app_name">Final Calculator</string>
    <string name="current_grade">Current Grade</string>
    <string name="grade_calculator">Grade Calculator</string>
    <string name="current_value">e.g. 81.9</string>
    <string name="final_percent">Final Percent</string>
    <string name="final_value">e.g. 30</string>
    <string name="grade_desired">Grade Desired</string>
    <string name="desired_value">e.g. 90</string>
    <string name="button">Calculate</string>
    <string name="grade_needed">Grade Needed</string>
</resources>
